# agent-tools-project

./: .gitignore  .pre-commit-config.yaml  README.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  middleware_request_id.py  routes_chat.py  routes_rag.py
backend/app/config/: logging.py  settings.py
backend/app/graph/: __init__.py  planner_schema.py  research_graph.py  state.py  tool_registry.py
backend/app/graph/nodes/: __init__.py  execute_tool.py  finalize.py  planner.py  prepare_query.py  synthesis.py
backend/app/llm/: __init__.py  ollama_chat.py  ollama_embeddings.py
backend/app/memory/: __init__.py  checkpoint_manager.py  context_budget.py  extractor.py  long_term.py  models.py  policy.py  retriever.py  scorer.py  service.py  session_manager.py  summarizer.py  turn_store.py
backend/app/observability/: __init__.py  context.py  logging_utils.py
backend/app/rag/: __init__.py
backend/app/rag/ingest/: __init__.py  chunking.py  pdf_extract.py  service.py
backend/app/rag/retrieval/: __init__.py  retriever.py
backend/app/rag/vectorstore/: __init__.py  qdrant_store.py
backend/app/retrieval/: __init__.py  query_rewrite.py  recency.py  rerank.py
backend/app/schemas/: __init__.py  chat.py  rag.py
backend/app/storage/: sqlite_store.py
backend/app/tools/: __init__.py  base.py  rag_retrieve.py  web_search.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
tests/backend/integration/: test_memory_chat_flow.py
tests/backend/unit/: test_chat_routes.py  (+13 more)
