[project]
name = "agent-tools-project"
version = "0.1.0"
description = "Agent Tools example"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search==8.1.0",
    "fastapi>=0.116.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.10",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.20",
    "pypdf>=6.0.0",
    "qdrant-client>=1.15.1",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.12.0",
]

test = [
    "httpx>=0.28.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests/backend"]
addopts = "-q"
